# clsj

./: CMakeLists.txt  Dockerfile  README.md
inc/: word.h
src/: word.cpp
swig/: CMakeLists.txt  clsj.i
